# snu-nlp-2022

./: .env  .gitignore  .pre-commit-config.yaml  README.md  bert-test.ipynb  dataset_visualizer.ipynb  inference.ipynb  kobert.py  pyproject.toml  trainer.py
config/: default.yaml
config/job/train/: default.yaml
dataset/: dataloader.py
eval/: dev-evaluate-in1
model/: model.py  model_arch.py
utils/: aws_s3_downloader.py  evaluate.py  kobert_utils.py  test_model.py  train_model.py  utils.py
